@@ -66,7 +66,7 @@ our %S = (%S,
     17 => [ '17+', 'CERO D' ],
     18 => [ '18+', 'CERO Z' ],
   },
-  release_types   => [0..2],
+  release_types   => [qw|complete partial trial|],
   platforms       => [qw|win dos lin mac dvd gba msx nds nes p98 psp ps1 ps2 ps3 drc sat sfc wii xb3 oth|],
   media           => {
    #DB     qty?
